Modifyed for mac