@@ -14,28 +14,28 @@
   <url>http://www.example.com</url>
 
   <properties>
-    <maven.compiler.source>24</maven.compiler.source>
-    <maven.compiler.target>24</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+          <cucumber.version>7.8.0</cucumber.version>
+          <maven.compiler.release>17</maven.compiler.release>
   </properties>
 
   <dependencies>
 
-          <!-- Cucumber Java -->
-          <dependency>
-              <groupId>io.cucumber</groupId>
-              <artifactId>cucumber-java</artifactId>
-              <version>7.8.0</version>
-              <scope>test</scope>
-          </dependency>
+      <dependency>
+          <groupId>io.cucumber</groupId>
+          <artifactId>cucumber-java</artifactId>
+          <version>${cucumber.version}</version>
+          <scope>test</scope>
+      </dependency>
 
-          <!-- Cucumber TestNG -->
-          <dependency>
-              <groupId>io.cucumber</groupId>
-              <artifactId>cucumber-testng</artifactId>
-              <version>7.8.0</version>
-              <scope>test</scope>
-          </dependency>
+      <dependency>
+          <groupId>io.cucumber</groupId>
+          <artifactId>cucumber-testng</artifactId>
+          <version>${cucumber.version}</version>
+          <scope>test</scope>
+      </dependency>
 
 
           <!-- TestNG -->
@@ -68,6 +68,44 @@
       <artifactId>commons-io</artifactId>
       <version>2.18.0</version>
     </dependency>
+
+      <!-- SLF4J API -->
+      <dependency>
+          <groupId>org.slf4j</groupId>
+          <artifactId>slf4j-api</artifactId>
+          <version>2.0.12</version>
+      </dependency>
+
+      <!-- Log4j2 API -->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-api</artifactId>
+          <version>2.22.1</version>
+      </dependency>
+
+      <!-- Log4j2 Core -->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.22.1</version>
+      </dependency>
+
+      <!-- Log4j2 SLF4J Binding -->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-slf4j2-impl</artifactId>
+          <version>2.22.1</version>
+      </dependency>
+
+      <!-- Extent Reports -->
+      <dependency>
+          <groupId>com.aventstack</groupId>
+          <artifactId>extentreports</artifactId>
+          <version>5.1.1</version>
+      </dependency>
+
+
+
   </dependencies>
 
   <build>
@@ -80,12 +118,12 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.11.0</version>
             <configuration>
-                <release>24</release>
-                <compilerArgs>
-                    <arg>--enable-preview</arg>
-                </compilerArgs>
+                <source>17</source>
+                <target>17</target>
             </configuration>
         </plugin>
+
+
 
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -93,7 +131,7 @@
             <version>3.2.5</version>
             <configuration>
                 <suiteXmlFiles>
-                    <suiteXmlFile>testng.xml</suiteXmlFile>
+                    <suiteXmlFile>testng1.xml</suiteXmlFile>
                 </suiteXmlFiles>
             </configuration>
         </plugin>
